--- a/examples/gojs controller/old.html
+++ b/examples/gojs controller/old.html
@@ -3,17 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{resetStyleUri}}" />
-    <link rel="stylesheet" href="{{styleUri}}" />
+    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Controller Viewer</title>
   </head>
   <body>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dagre-d3@0.6.4/dist/dagre-d3.min.js"></script>
-    <script src="{{scriptUri}}"></script>
     <main>
       <ul id="controllers"></ul>
       <div id="console"></div>
     </main>
+    <script src="./script.js"></script>
   </body>
 </html>
